Made config.general{} contain general aqueduct config

--- a/etc/aqueduct-server/aqueduct-server.conf
+++ b/etc/aqueduct-server/aqueduct-server.conf
@@ -1,4 +1,5 @@
 {
 	"port" : 6500,
+	"version" : "0.0.1",
 	"repositories" : "/home/vallery/Development/Aqueduct/aqueduct-server/etc/aqueduct-server/repositories.conf"
 }
