Started work on intake processing and Aqueduct control file processing

--- a/etc/aqueduct-server/aqueduct-server.conf
+++ b/etc/aqueduct-server/aqueduct-server.conf
@@ -1,5 +1,9 @@
 {
 	"port" : 6500,
 	"version" : "0.0.1",
-	"repositories" : "/home/vallery/Development/Aqueduct/aqueduct-server/etc/aqueduct-server/repositories.conf"
+	"repositories" : "/home/vallery/Development/Aqueduct/aqueduct-server/etc/aqueduct-server/repositories.conf",
+	"dir" : {
+		"intake" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in",
+		"processing" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in"
+	}
 }
