Created a new table for tasks assignments, rather than using columns in tasks

--- a/etc/aqueduct-server/repositories.conf
+++ b/etc/aqueduct-server/repositories.conf
@@ -1,7 +1,7 @@
 {
 	"ubuntu" : {
 		"defaults" : {
-			"arch" : ["source", "i386", "amd64"],
+			"arches" : ["source", "i386", "amd64"],
 			"components" : ["main"],
 			"distributions" : ["{{RELEASE}}", "{{RELEASE}}-security", "{{RELEASE}}-updates", "{{RELEASE}}-backports", "{{RELEASE}}-proposed"]
 		},
