Added loglevel-based printing support

--- a/etc/aqueduct-server/aqueduct-server.conf
+++ b/etc/aqueduct-server/aqueduct-server.conf
@@ -2,6 +2,7 @@
 	"port" : 6500,
 	"version" : "0.0.1",
 	"repositories" : "/home/vallery/Development/Aqueduct/aqueduct-server/etc/aqueduct-server/repositories.conf",
+	"loglevel" : "debug",
 	"dir" : {
 		"intake" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in",
 		"processing" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in"
