Reject uploads that are not encrypted and signed by a recognized key

--- a/etc/aqueduct-server/aqueduct-server.conf
+++ b/etc/aqueduct-server/aqueduct-server.conf
@@ -5,6 +5,7 @@
 	"loglevel" : "debug",
 	"dir" : {
 		"intake" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in",
-		"processing" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in"
+		"processing" : "/home/vallery/Development/Aqueduct/aqueduct-server/aqueduct-in",
+		"gpg" : "/home/vallery/Development/Aqueduct/aqueduct-server/gpg"
 	}
 }
